<resources>
    <string name="app_name">Soundwave Learning</string>
    <string name="kompetensi_dasar">Kompetensi Dasar</string>
    <string name="kompetensi_yang_diukur">Kompetensi yang diukur</string>
    <string name="_1">1.</string>
    <string name="kemampuan_pemecahan_masalah">Kemampuan Pemecahan Masalah</string>
    <string name="peserta_didik_dapat">Peserta Didik dapat :</string>
    <string name="_2">2.</string>
    <string name="kemampuan_berfikir_kritis">Kemampuan Berfikir Kritis</string>
    <string name="pendahuluan_materi">
        \n
        \t\tAlat musik tradisional Gamelan menjadi salah satu
        peninggalan budaya yang dilestarikan hingga sekarang.
        Gamelan menghasilkan nada-nada khas yang mencirikan
        budaya pada suatu daerah khususnya Jawa, Madura, dan Bali.
        Kata gamelan berasal dari bahasa Jawa <i>gamel</i> yang berarti
        memukul atau menabuh. Asal kita ini menunjukkan bahwa
        gamelan dimainkan dengan cara dipukul atau ditabuh.\n
        \t\tBunyi yang dihasilkan gamelan pada sebuah seni
        karawitan dipandang sebagai gelombang akustik atau
        gelombang bunyi. Gelombang bunyi yang terdengar dalam
        karawitan berasal dari tali-tali yang bergetar (siter dan rebab),
        kolom udara (gender), dan pelat kayu bergetar (gambang).
    </string>
    <string name="pendahuluan">Pendahuluan</string>
    <string name="materi_3">Materi 3</string>
    <string name="materi_2">Materi 2</string>
    <string name="materi_1">Materi 1</string>
    <string name="nama_t_nafi_atus_sholihah">Nama\t: Nafi\'atus Sholihah</string>
    <string name="ttl_t_ngawi_20_maret_1994">TTL\t: Ngawi, 20 Maret 1994</string>
    <string name="percobaan_1">Percobaan 1</string>
    <string name="percobaan_2">Percobaan 2</string>
    <string name="percobaan_3">Percobaan 3</string>
    <string name="mulai">Mulai</string>
    <string-array name="bahan_percobaan_1">
        <item>Toples Kaca (1 buah)</item>
        <item><i>Smartphone</i> (2 buah)</item>
    </string-array>
    <string-array name="langkah_percobaan_1">
        <item>Siapkan toples kaca dan <i>smarthphone</i>.</item>
        <item>Buka pengaturan alarm pada <i>smartphone</i> kalian.</item>
        <item>Masukkan <i>smartphone</i> pertama pada toples kaca dengan keadaan alarm menyala.</item>
        <item>Nyalakan alarm pada <i>smartphone</i> kedua di ruang terbuka.</item>
        <item>Ulangi langkah ke 3 dan ke 4 sebanyak 3 kali.</item>
        <item>Bandingkan hasil bunyi alarm yang tertutup oleh toples kaca dan alarm yang terbuka!</item>
        <item>Catat hasil percobaan kalian pada LKPD yang telah dibagikan.</item>
        <item>Diskusikan hasil percobaan dengan teman sekelompokmu.</item>
    </string-array>
    <string-array name="bahan_percobaan_2">
        <item>Aplikasi <i>Audio Frequency Counter</i></item>
        <item>Gender Barung dan Panerus</item>
        <item>Pemukul atau tabuh</item>
    </string-array>
    <string-array name="langkah_percobaan_2">
        <item>Tekan tombol \"Mulai\" dibawah untuk membuka aplikasi <i>Audio Frequency Counter</i>.</item>
        <item>Setelah aplikasi siap, tabuh gender per bilah hingga tertabuh semua.</item>
        <item>Ulangi langkah nomer 2 sebanyak 3 kali.</item>
        <item>Perhatikan perbedaan nada yang ditimbulkan.</item>
        <item>Catatlah percobaan pada \“Tabel Hasil Percobaan\” pada LKPD kalian.</item>
        <item>Diskusikanlah penyebab perbedaan nada yang dihasilkan pada setiap bilah.</item>
    </string-array>
    <string-array name="bahan_percobaan_3">
        <item>Aplikasi <i>Sound Meter</i></item>
        <item>Gender Barung dan Panerus</item>
        <item>Pemukul atau tabuh</item>
    </string-array>
    <string-array name="langkah_percobaan_3">
        <item>Tekan tombol \"Mulai\" dibawah untuk membuka aplikasi <i>Sound Meter</i>.</item>
        <item>Setelah aplikasi siap, tabuh gender per bilah hingga tertabuh semua.</item>
        <item>Hitunglah taraf intensitas bunyinya dengan variasi jarak!</item>
        <item>Ulangi langkah nomer 2 sebanyak 3 kali.</item>
        <item>Catatlah data hasil percobaan yang kalian lakukan pada tabel yang telah disediakan!</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tahukah_kamu">Tahukah Kamu?</string>
    <string name="materi_1_1_1">
        \tPada liburan sekolah, Gifari dan keluarga berlibur ke Yogyakarta dan menginap di salah satu hotel dekat Jl. Malioboro. Hotel tersebut memiliki fasilitas yang sangat lengkap, mulai dari kolam renang, restoran, pertunjukan musik dan masih banyak lainnya. Hari kedua menginap, di aula hotel dekat kolam renang diadakan sebuah pertunjukan musik gamelan. Keluarga Gifari sepakat untuk menyaksikan pertunjukkan tersebut bersama dan duduk di barisan terdepan. Saat pertunjukkan dimulai, alat musik mulai ditabuh dan menghasilkan nada yang indah. Gifari memperhatikan gong, dan terlihat jelas bergetar setelah ditabuh. Gifari pun bergumam, \"kenapa gong bergetar  sedemikian rupa kemudian kita bisa mendengar bunyinya?\". Di pertengahan pertunjukkan, Gifari merasa bosan. Dia meminta izin kepada mamanya untuk melakukan aktivitas lain yaitu berenang. Karena lokasi aula dan kolam renang sangatlah dekat, Gifari masih dapat mendengar suara musik tersebut.
        \n\tSetelah berganti pakaian renang, Gifari langsung masuk ke dalam kolam renang. Selama 30 detik dalam air, Gifari menyadari sesuatu, kenapa dia tidak mendengar musik gamelan. Dia bergegas memunculkan kepala ke permukaan kolam, bunyi gamelan pun terdengar kembali. Dia pun bertanya pada diri sendiri, kenapa dia tidak dapat mendengar suara saat berenang di kedalaman tertentu?
        \n*(kolam renang dianggap tidak berudara)
    </string>
    <string name="lakukan_percobaan_1">Lakukan Percobaan 1</string>
    <string name="materi_1_2_1">
        \tBunyi merupakan <b>gelombang mekanik</b> yang membutuhkan medium untuk memindahkan energi dari satu tempat ke tempat lain. Saat tidak ada medium penghantar bunyi, maka bunyi tidak dapat terdengar oleh telinga kita. Inilah sebab kenapa saat permainan musik gamelan dimainkan di ruang terbuka akan terdengar dari jarak 500 m sebelum tempat pertunjukan. Selain medium, getaran yang disebabkan oleh sumber bunyi seperti gamelan juga menjadi penyebab terdengarnya musik gamelan. Banyak getaran yang dihasilkan oleh sumber bunyi per detik disebut dengan <b>frekuensi.</b> Bunyi dapat di dengar oleh telinga kita apabila memiliki frekuensi dengan rentang 20 Hz-20.000 Hz (<b>audiosonik</b>). Kurang dari 20 Hz merupakan bunyi <b>infrasonik.</b> Sedangkan, lebih dari 20.000 Hz disebut dengan bunyi <b>ultrasonik.</b>
    </string>
    <string name="perlu_diingat">Perlu Diingat!</string>
    <string name="materi_1_2_2">
        \tSemakin kecil frekuensi sebuah bunyi, maka jumlah gelombang yang dihasilkan akan semakin sedikit tetapi panjang gelombangnya akan semakin besar (panjang). Sebaliknya, semakin besar frekuensi bunyi, maka jumlah gelombang yang dihasilkan semakin banyak, tetapi panjang gelombangnya semakin kecil (pendek).
    </string>
    <string name="materi_1_3_1">
        \tBunyi dapat merambat melalui medium zat padat, zat cair, dan zat gas. Saat alat musik gamelan dimainkan udara yang berada disekitar gamelan bergetar. Getaran udara dan kecepatan rambat bunyi pada udara yang menyebabkan getaran bunyi sampai ke gendang telinga kita.\nKecepatan bunyi:
    </string>
    <string name="materi_1_3_2">
        \tDengan, <i>v</i>: kecepatan bunyi (m/s); <i>s</i>: jarak yang ditempuh bunyi (m); <i>t</i>: waktu (s); <i>λ</i>: panjang gelombang (m); <i>T</i>: periode; <i>f</i>: frekuensi (Hz). Kecepatan bunyi dipegaruhi oleh medium dan suhu.
    </string>
    <string name="materi_1_3_3">
        \tCepat rambat bunyi pada zat cair dapat ditentukan dengan persamaan:
    </string>
    <string name="materi_1_3_4">
        \tDengan, <i>B</i>: modulus Bulk zat cair (N/m\u00B2), <i>ρ0</i>: massa jenis zat cair (kg/m\u00B3)
    </string>
    <string name="materi_1_3_5">
        \tCepat rambat bunyi pada zat padat dapat ditentukan dengan persamaan:
    </string>
    <string name="materi_1_3_6">
        \tDengan, <i>E</i>: modulus Young zat padat (N/m\u00B2); <i>ρ0</i>: massa jenis zat padat (kg/m\u00B3)
    </string>
    <string name="materi_1_3_7">
        \tCepat rambat bunyi pada zat gas dapat ditentukan dengan persamaan:
    </string>
    <string name="materi_1_3_8">
        \tDengan, <i>γ</i>: konstanta Laplace; <i>P0</i>: tetapan gas (Pa)\n
        Cepat rambat bunyi pada gas juga dapat ditentukan dengan meninjau dari hubungannya dengan suhu mutlak gas, berikut persamaannya:
    </string>
    <string name="materi_1_3_9">
        \tDengan, <i>R</i>: tetapan umum gas (8,314 J/mol K); <i>M</i>: massa molar gas (massa 1 mol gas); <i>T</i>: suhu mutlak gas (K).
    </string>
    <string name="materi_2_1_1">
        \tPara siswa di sekolah hendak latihan karawitan. Jojo dan Ani mendapat bagian untuk memainkan Gender (salah satu jenis gamelan). Sebelum mulai memainkan Gender mereka harus memahami perbedaan nada di setiap bilahnya. Mereka pun mencoba memukul bilah satu persatu dan memperhatikan nada dari setiap bilahan tersebut. Mereka pun saling bertanya, mengapa setiap bilahan Gender memnghasilkan nada yang berbeda? Selain memahami alat musik yang akan dimainkan, Jojo dan Ani diminta gurunya untuk menyalakan pengeras suara yang berada di ruang latihan. Setelah semua siap, para siswa memulai latihan. Pada saat latihan berlangsung, Rara memperhatikan kaca jendela yang ada pada ruangan tersebut. pada saat tertentu ada bagian kaca yang ikut bergetar, dan sebagian lagi tidak. Rara pun bergumam, peristiwa apakah itu, mengapa hal tersebut bisa terjadi?
    </string>
    <string name="lakukan_oercobaan_2">Lakukan Percobaan 2</string>
    <string name="materi_2_2_1">
        Sebelum mengetahui perbedaan nada pada setiap bilahan perlu diketahui bahwa <b>nada</b> merupakan bunyi dengan frekuensi tertentu yang teratur. Frekuensi yang lebih besar akan menghasilkan nada yang lebih tinggi dan sebaliknya. Semakin besar frekuensi semakin kecil panjang gelombang dan sebaliknya. Bunyi dengan frekuensi yang tidak beraturan disebut dengan <b>desah.</b> Kekhasan setiap bunyi meskipun mempuyai frekuensi yang sama dengan bunyi lainnya disebut dengan <b>warna bunyi (timbre).</b> Apabila diberikan simpangan yang besar, maka amplitudo bunyi semakin besar pula. Kekuatan bunyi dipengaruhi oleh amplitudo. Semakin besar amplitudo semakin kuat bunyi tersebut.
    </string>
    <string name="materi_2_4_1">
        Pola gelombang pada senar (dawai) berbeda dengan pola gelombang pada tabung seng atau bambu Gender. Berikut pola gelombang dan perbedaan nadanya.
    </string>
    <string name="materi_2_4_2">
        (<i>I</i> : Panjang tali; <i>F</i> : gaya (N); <i>m</i> : massa tali (kg)\nMenurut Hukum <b>Mersenne</b>
    </string>
    <string name="pembahasan">Pembahasan</string>
    <string name="soal_pm_5">
        Reno tinggal di sebuah desa yang di lalui lintasan kereta tanpa plang dan penjaga. Demi keselamatan, Reno ingin mengetahui waktu kedatangan kereta dengan menempelkan telinganya pada rel tersebut. Jika pada kenyataannya kereta berada pada jarak 5 km dari tempat reno menempelkan telinganya. Berapakah waktu yang diperlukan gelombang bunyi untuk merambat sampai ke telinga Reno jika dianggap kerapatan rel kereta 40.000 kg/m\u00b3 dan modulus elastisitasnya 2 x 10\u00b9\u00b9 N/m\u00b2…
    </string>
    <string name="pembahasan_pm_5">
        Untuk mengetahui waktu yang dibutuhkan gelombang bunyi meramat, maka perlu diketahui cepat rambatnya:
    </string>
</resources>