<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".KompetensiActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar_kompetensi"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_kompetensi"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:background="@color/backgroundWhite"
            app:cardBackgroundColor="@color/backgroundWhite"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            >
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pendahuluan"
                    android:textSize="16sp"
                    android:fontFamily="@font/raleway_bold"
                    android:textColor="@color/textColorBlack"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"
                    android:fontFamily="@font/raleway_reguler"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/pendahuluan_materi"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_materi_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_materi_button"
                android:text="@string/materi_1"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/raleway_bold"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btn_materi_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_materi_button"
                android:text="@string/materi_2"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/raleway_bold"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btn_materi_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_materi_button"
                android:text="@string/materi_3"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/raleway_bold"
                android:textSize="14sp"/>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>