<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:background="@color/backgroundWhite"
            app:cardBackgroundColor="@color/backgroundWhite"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            >
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"
                    android:fontFamily="@font/raleway_reguler"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/materi_1_3_1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/materi_1_3_1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"
                    android:fontFamily="@font/raleway_reguler"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/materi_1_3_2"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:background="@color/backgroundWhite"
            app:cardBackgroundColor="@color/backgroundWhite"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Kecepatan Bunyi pada Zat Cair"
                    android:textSize="16sp"
                    android:fontFamily="@font/raleway_bold"
                    android:textColor="@color/textColorBlack"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"
                    android:fontFamily="@font/raleway_reguler"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/materi_1_3_3"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/materi_1_3_2"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"
                    android:fontFamily="@font/raleway_reguler"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/materi_1_3_4"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:background="@color/backgroundWhite"
            app:cardBackgroundColor="@color/backgroundWhite"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:padding="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Kecepatan Bunyi pada Zat Padat"
                    android:textSize="16sp"
                    android:fontFamily="@font/raleway_bold"
                    android:textColor="@color/textColorBlack"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/materi_1_3_3"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"
                    android:fontFamily="@font/raleway_reguler"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/materi_1_3_5"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"
                    android:fontFamily="@font/raleway_reguler"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/materi_1_3_6"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:background="@color/backgroundWhite"
            app:cardBackgroundColor="@color/backgroundWhite"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Kecepatan Bunyi pada Zat Gas"
                    android:textSize="16sp"
                    android:fontFamily="@font/raleway_bold"
                    android:textColor="@color/textColorBlack"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"
                    android:fontFamily="@font/raleway_reguler"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/materi_1_3_7"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/materi_1_3_4"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"
                    android:fontFamily="@font/raleway_reguler"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/materi_1_3_8"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/materi_1_3_5"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"
                    android:fontFamily="@font/raleway_reguler"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/materi_1_3_9"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
