<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".KompetensiActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar_kompetensi"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_kompetensi"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_percobaan_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_materi_button"
                android:text="@string/percobaan_1"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/raleway_bold"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btn_percobaan_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_materi_button"
                android:text="@string/percobaan_2"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/raleway_bold"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btn_percobaan_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_materi_button"
                android:text="@string/percobaan_3"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/raleway_bold"
                android:textSize="14sp"/>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>